# scada-core

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FindPromiseHpp.cmake  FindScadaCore.cmake  ISSUES.md  README.md  boost.cmake  chromium_deps.md  cppcheck-suppressions.txt  gtest.cmake  install-boost.cmake  install_dll.cmake  package-manifest.cmake  package.cmake  package.toml  scada_module.cmake  vc-redist.cmake  vcpkg.json
base/: CMakeLists.txt  any_executor.h  any_executor_adapter.h  any_executor_dispatch.h  any_executor_promise.h  any_executor_timer.h  asio_executor.h  asio_executor_factory.h  asio_strand_executor.h  asio_task_runner.h  async_cache.h  async_completion.h  at_exit.h  auto_reset.h  awaitable.h  awaitable_completion.h  awaitable_promise.h  base64.h  base_span_compatibility.h  bind_util.h  boost_json_file.h  boost_log.cpp  boost_log.h  boost_log_adapter.h  boost_log_init.cpp  boost_log_init.h  bytebuf.h  bytemsg.h  callback_awaitable.h  cancelation.h  cell.h  common_types.h  console_logger.cpp  console_logger.h  constraints.h  csv_reader.cpp  csv_reader.h  csv_writer.cpp  csv_writer.h  debug_holder.h  (+95 more)
base/containers/: mru_cache.h
base/process/: process_metrics.h
base/synchronization/: waitable_event.h
base/test/: CMakeLists.txt  asio_test.h  asio_test_environment.h  async_cache_unittest.cpp  async_completion_unittest.cpp  awaitable_completion_unittest.cpp  awaitable_promise_unittest.cpp  awaitable_test.h  awaitable_unittest.cpp  callback_awaitable_unittest.cpp  cotest.h  executor_conversions_unittest.cpp  future_test.h  gtest_main.cpp  network_port_generator.h  network_test_environment.h  scoped_mock_clock_override.h  scoped_path_override.h  simple_test_clock.h  test_executor.h  test_net_interceptors.h  test_time.h
base/threading/: thread_checker.h  thread_collision_warner.h
base/time/: clock.h  default_clock.h  time.cpp  time.h  time_posix.cpp  time_unittest.cpp  time_win.cpp
base/timer/: timer.h
base/win/: clipboard.cpp  clipboard.h  dragdrop.h  dump.cpp  dump.h  dump_unittest.cpp  format_hresult.cpp  format_hresult.h  gdiplus_initializer.h  registry.h  registry2.h  scoped_bstr.h  scoped_gdi_object.h  scoped_handle.h  scoped_hdc.h  scoped_hglobal.h  scoped_process_information.h  scoped_select_object.h  scoped_variant.h  variant_util.h  wait_cursor.h  win_util2.cpp  win_util2.h
core/: CMakeLists.txt  aggregate_filter.h  attribute_ids.cpp  attribute_ids.h  attribute_service.h  attribute_service_mock.h  attribute_service_promises.h  authentication.h  authentication_mock.h  basic_types.h  client.cpp  client.h  client_unittest.cpp  configuration_types.h  data_change_filter.h  data_services.h  data_services_factory.cpp  data_services_factory.h  data_value.h  date_time.cpp  date_time.h  debug_util-inl.h  debug_util.cpp  debug_util.h  event.h  event_service.h  event_service_mock.h  event_util.cpp  event_util.h  expanded_node_id.h  extension_object.h  extension_object_unittest.cpp  history_service.h  history_service_mock.h  history_service_promises.h  history_types.h  localized_text.cpp  localized_text.h  method_service.h  method_service_mock.h  (+48 more)
core/test/: awaiter.h  client.h  client_test.h  monitored_value.h  test_address_space.h  test_client.h  test_monitored_event_item.h  test_monitored_item.h
docs/: README.md  remote.md  remote_disconnect.mmd  remote_overview.mmd  remote_request_flow.mmd  remote_session_creation.mmd  services.md
metrics/: CMakeLists.txt  aggregated_metric.h  boost_log_metric_reporter.h  metric_registry.h  metric_service.h  metric_service_impl.cpp  metric_service_impl.h  metric_service_impl_unittest.cpp  metric_service_mock.h  metric_service_unittest.cpp  metric_value.h  metrics.h  trace_id.h  trace_sink.h  trace_sink_impl.cpp  trace_sink_impl.h  tracer.cpp  tracer.h  tracing.cpp  tracing.h
model/: CMakeLists.txt  compile.bat  compile_node_ids.py  data_items_model.csv  data_items_model.xml  data_items_node_ids.h  data_items_translations.json  devices_model.csv  devices_model.xml  devices_node_ids.h  devices_translations.json  filesystem_model.csv  filesystem_model.xml  filesystem_node_ids.h  filesystem_translations.json  history_model.csv  history_model.xml  history_node_ids.h  history_translations.json  make_translations.bat  make_translations.py  namespaces.cpp  namespaces.h  nested_node_ids.h  node_id_util.cpp  node_id_util.h  node_id_util_unittest.cpp  node_ids.h.template  node_ids.py  opc_node_ids.h  scada_model.csv  scada_model.xml  scada_node_ids.h  scada_translations.json  security_model.csv  security_model.xml  security_node_ids.h  security_translations.json  static_types.h
net/: CMakeLists.txt  net_boost_logger_adapter.h  net_executor_adapter.h  net_logger_adapter.h
remote/: CMakeLists.txt  README.md  connection.h  event_service_proxy.cpp  event_service_proxy.h  history_proxy.cpp  history_proxy.h  history_stub.cpp  history_stub.h  message_sender.h  message_sender_mock.h  monitored_item_proxy.cpp  monitored_item_proxy.h  monitored_item_proxy_unittest.cpp  monitored_item_router.h  monitored_item_router_mock.h  node_management_proxy.cpp  node_management_proxy.h  node_management_stub.cpp  node_management_stub.h  node_management_stub_unittest.cpp  protobuf_grpc.cmake  protocol.h  protocol_buffer.h  protocol_message_reader.h  protocol_message_transport.cpp  protocol_message_transport.h  protocol_utils.cpp  protocol_utils.h  protocol_utils_unittest.cpp  remote_connection.cpp  remote_connection.h  remote_listener.h  remote_listener_unittest.cpp  remote_services.cpp  remote_services.h  remote_services_unittest.cpp  remote_session_manager.cpp  remote_session_manager.h  scada.bat  (+21 more)
scada/: CMakeLists.txt  aggregate_filter.cpp  aggregate_filter.h  attribute_ids.cpp  attribute_service.h  attribute_service_mock.h  attribute_service_promises.h  authentication.h  authentication_adapters.h  authentication_adapters_unittest.cpp  authentication_mock.h  callback_awaitable.h  callback_awaitable_unittest.cpp  client.cpp  client.h  client_monitored_item.h  client_unittest.cpp  coroutine_services.h  (+94 more)
(+10 files in other folders)
